# OpenAperEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  OpenUtils.h  README.md  build.sh  clear_workspace.sh  fix_ubuntu.txt  get_dependencies.sh  get_glew.sh  install_tools.sh  main.cpp
cmake/: FindGLEW.cmake  FindGLFW.cmake
graphics/: Color.cpp  Color.h  OpenGraphics.cpp  OpenGraphics.h
include/openaperengine/: OpenUtils.h
include/openaperengine/graphics/: OpenGraphics.h  OpenTexture.h
include/openaperengine/input/: Controller.h  ControllerManager.h
include/openaperengine/window/: OpenCursor.h  OpenMonitor.h  OpenWindow.h
include/openaperrender/: OpenContext.h  OpenUtils.h
include/openaperrender/graphics/: Color.h  OpenGraphics.h  OpenTexture.h
include/openaperrender/input/: Controller.h  ControllerManager.h
include/openaperrender/window/: OpenCursor.h  OpenMonitor.h  OpenWindow.h
include/openw67render/: OpenContext.h  OpenUtils.h
include/openw67render/graphics/: Color.h  OpenGraphics.h  OpenTexture.h
include/openw67render/input/: Controller.h  ControllerManager.h
include/openw67render/window/: OpenCursor.h  OpenMonitor.h  OpenWindow.h
src/: CMakeLists.txt  OpenContext.cpp  OpenUtils.cpp  main.cpp
src/graphics/: Color.cpp  OpenGraphics.cpp  OpenTexture.cpp
src/input/: Controller.cpp  ControllerManager.cpp
src/main/cpp/include/openaperengine/: OpenContext.h  OpenUtils.h
src/main/cpp/include/openaperengine/graphics/: Color.h
src/main/cpp/include/openaperengine/input/: Controller.h
src/main/cpp/include/openaperengine/window/: OpenMonitor.h  OpenWindow.h
src/main/cpp/sources/: OpenContext.cpp
src/main/cpp/sources/graphics/: Color.cpp  OpenTexture.cpp
src/main/cpp/sources/input/: Controller.cpp
src/main/cpp/sources/window/: OpenMonitor.cpp  OpenWindow.cpp
src/window/: OpenCursor.cpp  OpenMonitor.cpp  OpenWindow.cpp
window/: OpenCursor.cpp  OpenMonitor.cpp  OpenWindow.cpp  OpenWindow.h
